--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -172,17 +172,23 @@ hapi:
     #    reloadExisting: false
     #    installMode: STORE_AND_INSTALL
     #      example not from registry
-    #      ips_1_0_0:
-    #        packageUrl: https://build.fhir.org/ig/HL7/fhir-ips/package.tgz
-    #        name: hl7.fhir.uv.ips
-    #        version: 1.0.0
+
+    # uncomment ips_enabled for IPS generation
+    ips_2_0_0:
+      packageUrl: https://hl7.org/fhir/uv/ips/2024Sep/package.tgz
+      name: hl7.fhir.uv.ips
+      version: 2.0.0-ballot
+
     #    supported_resource_types:
     #      - Patient
     #      - Observation
     ##################################################
     # Allowed Bundle Types for persistence (defaults are: COLLECTION,DOCUMENT,MESSAGE)
     ##################################################
-    #    allowed_bundle_types: COLLECTION,DOCUMENT,MESSAGE,TRANSACTION,TRANSACTIONRESPONSE,BATCH,BATCHRESPONSE,HISTORY,SEARCHSET
+
+    # uncomment allowed_bundle_types for IPS generation
+    allowed_bundle_types: COLLECTION,DOCUMENT,MESSAGE,TRANSACTION,TRANSACTIONRESPONSE,BATCH,BATCHRESPONSE,HISTORY,SEARCHSET
+    
     #    allow_cascading_deletes: true
     #    allow_contains_searches: true
     allow_external_references: true
@@ -192,7 +198,10 @@ hapi:
     #    mass_ingestion_mode_enabled: false
     ### tells the server to automatically append the current version of the target resource to references at these paths
     #    auto_version_reference_at_paths: Device.patient, Device.location, Device.parent, DeviceMetric.parent, DeviceMetric.source, Observation.device, Observation.subject
-    #    ips_enabled: false
+
+    # uncomment ips_enabled for IPS generation
+    ips_enabled: true
+    
     #    default_encoding: JSON
     #    default_pretty_print: true
     #    default_page_size: 20
